--- a/diceGame.html
+++ b/diceGame.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>-----Battle Royale-----</title>
+		<title>---Battle Royale---</title>
 		<script src="diceGame.js"></script>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Eater" rel="stylesheet">
@@ -11,7 +11,7 @@
 <body>
 
 	<center>
-		<h1 class="col-4 firstpage headerfont">-----Battle Royale-----</h1>
+		<h1 class="col-4 firstpage headerfont">---Battle Royale---</h1>
 		<br><br><br><br>
 	</center>
 
